--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div>
             <ul>
                 <li>
-                    <a href="search-engine-optimization" title="Link to another page">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization" title="Link to another page">Search Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="online-reputation-management" title="Link to another page">Online Reputation Management</a>
+                    <a href="#online-reputation-management" title="Link to another page">Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="social-media-marketing" title="Link to another page">Social Media Marketing</a>
+                    <a href="#social-media-marketing" title="Link to another page">Social Media Marketing</a>
                 </li>
             </ul>
         </div>
@@ -29,7 +29,7 @@
     <div class="hero"></div>
 
     <section class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="This is an image of Search Engine Optimization"/>
             <h2>Search Engine Optimization</h2>
             <p>
